Make typeof (0, undef) throw a reference error. bug 333728, r=brendan